crates/nanoc-codegen/src/snapshots/nanoc_codegen__test__func_call.snap
---
source: crates/nanoc-codegen/src/test.rs
expression: try_it(code)
---
; ModuleID = 'main'
source_filename = "main"

declare i32 @getint()

declare i32 @getch()

declare i32 @getarray(ptr)

declare void @putint(i32)

declare void @putch(i32)

declare void @putarray(i32, ptr)

declare void @starttime()

declare void @stoptime()

define i32 @func(i32 %p, i32 %y) {
entry:
  %x = alloca i32, align 4
  %y2 = alloca i32, align 4
  %p1 = alloca i32, align 4
  store i32 %p, ptr %p1, align 4
  store i32 %y, ptr %y2, align 4
  store i32 233, ptr %x, align 4
  %x3 = load i32, ptr %x, align 4
  ret i32 %x3
}

define i32 @main() {
entry:
  %res = alloca i32, align 4
  %call = call i32 @func(i32 1, i32 2)
  store i32 %call, ptr %res, align 4
  ret i32 0
}
